--- a/task_manager/templates/task_manager/shoppinglist_detail.html
+++ b/task_manager/templates/task_manager/shoppinglist_detail.html
@@ -20,4 +20,5 @@
       <a class="btn btn-danger btn-lg" href="{% url 'task_manager:slist-delete' shoppinglist.pk %}" role="button">Delete</a>
     </div>
   </div>
+  <a class="btn mb-0 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:slist-list' %}" role="button">Back to Shopping Lists</a>
 {% endblock %}
