--- a/task_manager/templates/task_manager/task_detail.html
+++ b/task_manager/templates/task_manager/task_detail.html
@@ -17,5 +17,5 @@
       <a class="btn btn-danger btn-lg" href="{% url 'task_manager:task-delete' task.pk %}" role="button">Delete</a>
     </div>
   </div>
-  <a class="btn mb-0 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-list' %}" role="button">Back to Task List</a>
+  <a class="btn mb-0 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-list' %}" role="button">Back to Tasks</a>
 {% endblock %}
