Changed theme colours

--- a/task_manager/static/task_manager/css/input_form.css
+++ b/task_manager/static/task_manager/css/input_form.css
@@ -28,5 +28,15 @@
     box-shadow: 0 0 0 0.1rem #00a161;
 }
 .input-group-text {
-    border: 1px solid #00a161;
+    /*border: 1px solid #00a161;*/
+    border: none;
+}
+.input-group .form-control {
+    border: none !important;
+    border-left: 1px solid #00a161 !important;
+    color: white;
+}
+.input-group .form-control:focus {
+    color: white;
+    box-shadow: none;
 }
