--- a/task_manager/templates/task_manager/shoppinglist_detail.html
+++ b/task_manager/templates/task_manager/shoppinglist_detail.html
@@ -1,13 +1,13 @@
 {% extends 'task_manager/base_generic.html' %}
 
 {% block content %}
-  <div class="jumbotron mb-3 p-2 bg-scheduler c-scheduler-dark">
+  <div class="jumbotron mb-3 p-2 bg-scheduler-dark-3 c-scheduler-light">
     <h1 class="display-4">{{ shoppinglist.name }}</h1>
     <hr class="my-4">
     {% if shoppinglist.shoppinglistitem_set.all.count >= 1 %}
       <ul>
         {% for item in shoppinglist.shoppinglistitem_set.all %}
-        <li><a class="c-scheduler-dark {% if item.status %}text-line-through{% endif %}" href="{% url 'task_manager:slist-item-mark-bought' item.pk %}"><p class="lead">{{ item }}</p></a></li>
+        <li><a class="c-scheduler-light {% if item.status %}text-line-through{% endif %}" href="{% url 'task_manager:slist-item-mark-bought' item.pk %}"><p class="lead">{{ item }}</p></a></li>
         {% endfor %}
       </ul>
     {% else %}
@@ -20,5 +20,5 @@
       <a class="btn btn-danger btn-lg" href="{% url 'task_manager:slist-delete' shoppinglist.pk %}" role="button">Delete</a>
     </div>
   </div>
-  <a class="btn mb-0 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:slist-list' %}" role="button">Back to Shopping Lists</a>
+  <a class="btn bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:slist-list' %}" role="button">Back to Shopping Lists</a>
 {% endblock %}
