--- a/task_manager/static/task_manager/css/main.css
+++ b/task_manager/static/task_manager/css/main.css
@@ -1,21 +1,23 @@
 body {
     /*background-color: #424240;*/
     /* Background pattern from Toptal Subtle Patterns */
-    background-image: url('../images/prism.png');
+    background-image: url('../images/wheat.png');
     color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 17px;
 }
 .dropdown-menu {
-    background-color: #424240;
+    background-color: #2F3336;
 }
 .dropdown-item {
     color: white;
 }
 .dropdown-item:hover {
-    background-color: #424240;
+    background-color: #2F3336;
     color: #00a161;
 }
 .dropdown-item:focus {
-    background-color: #424240;
+    background-color: #2F3336;
     color: white;
 }
 .dropdown-divider {
