--- a/task_manager/templates/task_manager/task_confirm_delete.html
+++ b/task_manager/templates/task_manager/task_confirm_delete.html
@@ -5,6 +5,7 @@
   <p>Are you sure you want to delete the task: <strong class="text-success">{{ task }}</strong>?</p>
   <form method="POST">
     {% csrf_token %}
+    <a class="btn bg-scheduler c-scheduler-dark" href="{% url 'task_manager:task-detail' task.pk %}" role="button">No, go back</a>
     <button type="submit" class="btn btn-danger">Yes, delete</button>
   </form>
 {% endblock %}
