--- a/task_manager/templates/task_manager/shoppinglist_detail.html
+++ b/task_manager/templates/task_manager/shoppinglist_detail.html
@@ -15,10 +15,16 @@
     {% endif %}
     <hr class="my-4 bg-scheduler-light">
     <p><strong>Date added:</strong> {{ shoppinglist.date_added|date:'d M Y H:i' }}</p>
-    <div class="d-flex w-100 justify-content-between">
-      <a class="btn bg-scheduler-dark-3 c-scheduler btn-lg" href="{% url 'task_manager:slist-update' shoppinglist.pk %}" role="button">Edit</a>
-      <a class="btn btn-danger btn-lg" href="{% url 'task_manager:slist-delete' shoppinglist.pk %}" role="button">Delete</a>
-    </div>
+    {% if user.is_authenticated %}
+      <div class="d-flex w-100 justify-content-between">
+        <a class="btn bg-scheduler-dark-3 c-scheduler btn-lg" href="{% url 'task_manager:slist-update' shoppinglist.pk %}" role="button">Edit</a>
+        <a class="btn btn-danger btn-lg" href="{% url 'task_manager:slist-delete' shoppinglist.pk %}" role="button">Delete</a>
+      </div>
+      <a class="btn mt-2 bg-scheduler-dark-3 c-scheduler btn-lg" href="{% url 'task_manager:slist-share' shoppinglist.pk %}" role="button">{% if shoppinglist.is_shared %}Unshare{% else %}Share{% endif %}</a>
+{#      {% if shoppinglist.is_shared %}<small>scheduler-kamilcinner@herokuapp.com/scheduler/shoppinglist/{{ shoppinglist.pk }}</small>{% endif %}#}
+    {% endif %}
   </div>
-  <a class="btn bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:slist-list' %}" role="button">Back to Shopping Lists</a>
+  {% if user.is_authenticated %}
+    <a class="btn bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:slist-list' %}" role="button">Back to Shopping Lists</a>
+  {% endif %}
 {% endblock %}
