Added task sharing, uuid and fixed safety problems

--- a/task_manager/static/task_manager/css/main.css
+++ b/task_manager/static/task_manager/css/main.css
@@ -1,5 +1,5 @@
 body {
-    /*background-color: #424240;*/
+    background-color: black;
     /* Background pattern from Toptal Subtle Patterns */
     background-image: url('../images/wheat.png');
     color: white;
