--- a/task_manager/templates/task_manager/base_generic.html
+++ b/task_manager/templates/task_manager/base_generic.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header class="sticky-top">
-      <nav class="navbar navbar-light bg-scheduler navbar-expand-md">
+      <nav class="navbar navbar-light bg-scheduler navbar-expand-lg">
         <a class="navbar-brand c-scheduler-dark-2" href="{% url 'task_manager:index' %}"><img class="d-inline-block mr-1 align-bottom" src="{% static 'task_manager/images/logo.png' %}" width="30" height="30" alt="logo"> Scheduler</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Navigation toggler">
           <span class="navbar-toggler-icon"></span>
