--- a/task_manager/templates/task_manager/task_detail.html
+++ b/task_manager/templates/task_manager/task_detail.html
@@ -8,14 +8,19 @@
     <p class="lead">{{ task.description }}</p>
     <hr class="my-4 {% if task.priority == 'n' %}bg-scheduler-dark-2{% elif task.priority == 'h' %}bg-scheduler-light{% else %}bg-scheduler-dark-3{% endif %}">
     <p class="{% if not task.status and task.is_overdue %}text-danger{% endif %}"><strong>Due date:</strong> {{ task.due_date|date:'d M Y H:i' }}</p>
-    <div class="d-flex mb-2 w-100 justify-content-between">
-      <p><strong>Priority:</strong> <span class="{% if task.priority == 'h' %}font-weight-bold text-warning{% elif task.priority == 'l' %}text-muted{% else %}{% endif %}">{{ task.get_priority_display }}</span></p>
-      <a class="btn {% if task.priority == 'n' %}bg-scheduler-dark-2{% else %}bg-scheduler-dark-3{% endif %} c-scheduler btn-lg" href="{% url 'task_manager:task-update' task.pk %}" role="button">Edit</a>
-    </div>
-    <div class="d-flex w-100 justify-content-between">
-      <a class="btn {% if task.priority == 'n' %}bg-scheduler-dark-2{% else %}bg-scheduler-dark-3{% endif %} c-scheduler btn-lg" href="{% url 'task_manager:task-mark' task.pk %}" role="button">{% if task.status %}Undone{% else %}Mark done{% endif %}</a>
-      <a class="btn btn-danger btn-lg" href="{% url 'task_manager:task-delete' task.pk %}" role="button">Delete</a>
-    </div>
+    <p><strong>Priority:</strong> <span class="{% if task.priority == 'h' %}font-weight-bold text-warning{% elif task.priority == 'l' %}text-muted{% else %}{% endif %}">{{ task.get_priority_display }}</span></p>
+    {% if task.owner.username == user.username %}
+      <div class="d-flex mb-2 w-100 justify-content-between">
+        <a class="btn {% if task.priority == 'n' %}bg-scheduler-dark-2{% else %}bg-scheduler-dark-3{% endif %} c-scheduler btn-lg" href="{% url 'task_manager:task-share' task.pk %}" role="button">{% if task.is_shared %}Unshare{% else %}Share{% endif %}</a>
+        <a class="btn {% if task.priority == 'n' %}bg-scheduler-dark-2{% else %}bg-scheduler-dark-3{% endif %} c-scheduler btn-lg" href="{% url 'task_manager:task-update' task.pk %}" role="button">Edit</a>
+      </div>
+      <div class="d-flex w-100 justify-content-between">
+        <a class="btn {% if task.priority == 'n' %}bg-scheduler-dark-2{% else %}bg-scheduler-dark-3{% endif %} c-scheduler btn-lg" href="{% url 'task_manager:task-mark' task.pk %}" role="button">{% if task.status %}Undone{% else %}Mark done{% endif %}</a>
+        <a class="btn btn-danger btn-lg" href="{% url 'task_manager:task-delete' task.pk %}" role="button">Delete</a>
+      </div>
+    {% endif %}
   </div>
-  <a class="btn bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-list' %}" role="button">Back to Tasks</a>
+  {% if task.owner.username == user.username %}
+    <a class="btn bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-list' %}" role="button">Back to Tasks</a>
+  {% endif %}
 {% endblock %}
