--- a/task_manager/templates/task_manager/task_detail.html
+++ b/task_manager/templates/task_manager/task_detail.html
@@ -3,6 +3,7 @@
 {% block content %}
   <div class="jumbotron mb-3 p-2 {% if task.priority == 'h' %}bg-scheduler-dark-2 c-scheduler-white{% elif task.priority == 'l' %}bg-scheduler-light c-scheduler-dark{% else %}bg-scheduler-dark-3 c-scheduler-light{% endif %}">
     <h1 class="display-4">{{ task.name }}</h1>
+    {% if task.is_shared %}<p class="font-weight-light my-0 text-success">Shared</p>{% endif %}
     {% if not task.status and task.is_overdue %}<p class="my-0"><strong class="text-danger"> Overdue!</strong></p>{% endif %}
     <hr class="my-4 {% if task.priority == 'n' %}bg-scheduler-dark-2{% elif task.priority == 'h' %}bg-scheduler-light{% else %}bg-scheduler-dark-3{% endif %}">
     <p class="lead">{{ task.description }}</p>
