--- a/task_manager/static/task_manager/css/main.css
+++ b/task_manager/static/task_manager/css/main.css
@@ -52,6 +52,9 @@ textarea {
 .text-line-through {
     text-decoration: line-through !important;
 }
+.text-line-through a {
+    color: black !important;
+}
 
 
 .bg-scheduler {
