--- a/task_manager/templates/task_manager/base_generic.html
+++ b/task_manager/templates/task_manager/base_generic.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% load static %}
     <!-- Bootstrap CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,700&amp;subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:0,100,200,300,400,500,600,700&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'task_manager/bootstrap/css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'task_manager/css/main.css' %}">
     <link rel="stylesheet" href="{% static 'task_manager/css/clean_links.css' %}">
@@ -57,14 +57,16 @@
                   <a class="dropdown-item disabled" href="{% url 'task_manager:inactive-yet' %}">Delete</a>
                 </div>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-expanded="false" id="submenu" aria-haspopup="true">About</a>
-                <div class="dropdown-menu" aria-labelledby="submenu">
-                  <a class="dropdown-item" href="{% url 'task_manager:about' %}">Scheduler</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{% url 'task_manager:other-projects' %}">Other projects</a>
-                </div>
-              </li>
+            {% endif %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-expanded="false" id="submenu" aria-haspopup="true">About</a>
+              <div class="dropdown-menu" aria-labelledby="submenu">
+                <a class="dropdown-item" href="{% url 'task_manager:about' %}">Scheduler</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{% url 'task_manager:other-projects' %}">Other projects</a>
+              </div>
+            </li>
+            {% if user.is_authenticated %}
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             {% endif %}
           </ul>
