--- a/task_manager/templates/task_manager/shoppinglist_detail.html
+++ b/task_manager/templates/task_manager/shoppinglist_detail.html
@@ -9,7 +9,7 @@
       <p class="my-0 text-right"><small class="font-weight-light text-muted">Click on item to mark bought / not bought</small></p>
       <ul>
         {% for item in shoppinglist.shoppinglistitem_set.all %}
-        <li class="{% if item.status %}text-muted{% endif %}"><a class="{% if item.status %}text-line-through text-muted{% else %}c-scheduler-white{% endif %}" href="{% url 'task_manager:slist-item-mark-bought' item.pk %}"><p class="lead">{{ item.name }}</p></a></li>
+        <li class="my-0 {% if item.status %}text-muted{% endif %}"><a class="{% if item.status %}text-line-through text-muted{% else %}c-scheduler-white{% endif %}" href="{% url 'task_manager:slist-item-mark-bought' item.pk %}"><p class="lead mt-0 mb-2">{{ item.name }}</p></a></li>
         {% endfor %}
       </ul>
     {% else %}
