Added jumboters to templates

--- a/scheduler/templates/registration/password_reset_complete.html
+++ b/scheduler/templates/registration/password_reset_complete.html
@@ -1,10 +1,8 @@
 {% extends "task_manager/base_generic.html" %}
 
 {% block content %}
-  <div class="row">
-    <div class="col-12">
-      <h1>The password has been changed!</h1>
-      <p><a href="{% url 'login' %}">log in again?</a></p>
-    </div>
+  <div class="jumbotron py-3 bg-scheduler-dark-2">
+    <h1>The password has been changed!</h1>
+    <a class="btn bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'login' %}" role="button">Log in again</a>
   </div>
 {% endblock %}
