--- a/scheduler/templates/registration/password_reset_form.html
+++ b/scheduler/templates/registration/password_reset_form.html
@@ -1,16 +1,19 @@
 {% extends "task_manager/base_generic.html" %}
 
 {% block content %}
-  <div class="row">
-    <div class="col-12">
-      <form action="" method="post">
+      <form method="post">
         {% csrf_token %}
-        {% if form.email.errors %}
-          {{ form.email.errors }}
-        {% endif %}
-        <p>{{ form.email }}</p>
-        <input type="submit" class="btn btn-default btn-lg" value="Reset password">
+        <div class="jumbotron py-3 bg-scheduler-dark-2">
+        <div class="form-group">
+          {{ form.email.label_tag }}
+          <input class="form-control bg-scheduler-dark-2" type="email" name="email" autocomplete="email" maxlength="254" required id="id_email">
+          {% if form.email.errors %}
+            <small class="text-danger">{{ form.email.errors }}</small>
+          {% endif %}
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn bg-scheduler c-scheduler-dark">Reset password</button>
+        </div>
+        </div>
       </form>
-    </div>
-  </div>
 {% endblock %}
