--- a/task_manager/templates/task_manager/about.html
+++ b/task_manager/templates/task_manager/about.html
@@ -1,6 +1,8 @@
 {% extends 'task_manager/base_generic.html' %}
 
 {% block content %}
+  <div class="jumbotron py-1 bg-scheduler-dark-2">
   <h1 class="h3 text-center">Scheduler</h1>
   <p class="text-center">Is an hobby app which is used to help you manage tasks and shopping lists, for now. This project is mainly created for better CV presentation and of course for gain skills at web application programming. It is written in <a class="text-success" target="_blank" href="https://www.djangoproject.com/">Django</a> which I started to love some time ago. I hope to add some new features soon.</p>
+  </div>
 {% endblock %}
