--- a/task_manager/templates/task_manager/shoppinglist_update.html
+++ b/task_manager/templates/task_manager/shoppinglist_update.html
@@ -82,6 +82,6 @@ $(document).ready(function(){
       </div>
     </form>
     <hr class="my-4 bg-scheduler-light">
-    <p><strong>Date added:</strong> {{ shoppinglist.date_added|date:'d M Y H:i' }}</p>
+    <p><strong>Last edit:</strong> {{ shoppinglist.date_added|date:'d M Y H:i' }}</p>
   </div>
 {% endblock %}
