--- a/scheduler/templates/auth/user_form.html
+++ b/scheduler/templates/auth/user_form.html
@@ -3,6 +3,7 @@
 {% block content %}
   <form action="" method="post">
     {% csrf_token %}
+    <div class="jumbotron py-3 bg-scheduler-dark-2">
     {% for field in form %}
       <div class="form-group">
         {{ field.label_tag }}
@@ -14,7 +15,8 @@
       </div>
     {% endfor %}
     <div class="form-group">
-      <button type="submit" class="btn mb-3 bg-scheduler c-scheduler-dark">Submit</button>
+      <button type="submit" class="btn bg-scheduler c-scheduler-dark">Submit</button>
+    </div>
     </div>
   </form>
 {% endblock %}
