--- a/scheduler/templates/registration/password_reset_confirm.html
+++ b/scheduler/templates/registration/password_reset_confirm.html
@@ -1,33 +1,32 @@
 {% extends "task_manager/base_generic.html" %}
 
 {% block content %}
-  <div class="row">
-    <div class="col-12">
-      {% if validlink %}
-        <p>Please enter (and confirm) your new password.</p>
-        <form action="" method="post">
-        {% csrf_token %}
-          <table>
-            <tr>
-              <td>{{ form.new_password1.errors }}
-                <label for="id_new_password1">New password:</label></td>
-              <td>{{ form.new_password1 }}</td>
-            </tr>
-            <tr>
-              <td>{{ form.new_password2.errors }}
-                <label for="id_new_password2">Confirm password:</label></td>
-              <td>{{ form.new_password2 }}</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td><input type="submit" value="Change my password" /></td>
-            </tr>
-          </table>
-        </form>
-      {% else %}
-        <h1>Password reset failed</h1>
-        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
-      {% endif %}
+  {% if validlink %}
+    <div class="jumbotron py-3 bg-scheduler-dark-2">
+    <p>Please enter (and confirm) your new password.</p>
+    <form method="post">
+      {% csrf_token %}
+      <div class="form-group">
+        {{ form.new_password1.label_tag }}
+        <input class="form-control bg-scheduler-dark-2" type="password" name="new_password1" autocomplete="new-password" required id="id_new_password1">
+        {% for error in form.new_password1.errors %}
+          <small class="text-danger">{{ error }}</small>
+        {% endfor %}
+      </div>
+      <div class="form-group">
+        {{ form.new_password2.label_tag }}
+        <input class="form-control bg-scheduler-dark-2" type="password" name="new_password2" autocomplete="new-password" required id="id_new_password2">
+        {% for error in form.new_password2.errors %}
+          <small class="text-danger">{{ error }}</small>
+        {% endfor %}
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn bg-scheduler c-scheduler-dark">Change my password</button>
+      </div>
+    </form>
+  {% else %}
+    <h1>Password reset failed</h1>
+    <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
     </div>
-  </div>
+  {% endif %}
 {% endblock %}
