--- a/scheduler/templates/registration/password_reset_done.html
+++ b/scheduler/templates/registration/password_reset_done.html
@@ -1,9 +1,7 @@
 {% extends "task_manager/base_generic.html" %}
 
 {% block content %}
-  <div class="row">
-    <div class="col-12">
-      <p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
-    </div>
+  <div class="jumbotron py-2 bg-scheduler-dark-2">
+    <p class="my-0 text-center">We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your <span class="text-danger">spam</span> folder.</p>
   </div>
 {% endblock %}
