--- a/task_manager/static/task_manager/css/input_form.css
+++ b/task_manager/static/task_manager/css/input_form.css
@@ -1,5 +1,5 @@
 .form-group {
-    max-width: 400px !important;
+    /*max-width: 400px !important;*/
     margin-left: auto;
     margin-right: auto;
 }
