--- a/task_manager/templates/task_manager/index.html
+++ b/task_manager/templates/task_manager/index.html
@@ -2,17 +2,23 @@
 
 {% block content %}
   {% if user.is_authenticated %}
-    <h1 class="text-center mb-3">Welcome {{ request.user.username }}!</h1>
+    <div class="jumbotron mb-3 py-1 bg-scheduler-dark-2">
+    <h1 class="text-center">Welcome {{ request.user.username }}!</h1>
+    </div>
     <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-list' %}" role="button">Your Tasks</a>
     <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-create' %}" role="button">Create Task</a>
     <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:slist-list' %}" role="button">Your Shopping Lists</a>
     <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:slist-create' %}" role="button">Create Shopping List</a>
+    <div class="jumbotron py-1 bg-scheduler-dark-2">
     <h2 class="text-center mb-3">Summary</h2>
     <p class="text-center">You have <strong>{{ num_tasks }}</strong> task{% if num_tasks != 1 %}s{% endif %} on-going</p>
     <p class="text-center">You have <strong>{{ num_active_slist }}</strong> active shopping list{% if num_active_slist != 1 %}s{% endif %}</p>
+    </div>
   {% else %}
+    <div class="jumbotron py-3 mb-3 bg-scheduler-dark-2">
     <h1 class="text-center mb-3">Welcome to Scheduler!</h1>
     <p class="text-center">Your private task manager</p>
+    </div>
     <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'login' %}" role="button">Login to Start</a>
     <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'django_registration:user-create' %}" role="button">Register</a>
   {% endif %}
