--- a/task_manager/templates/task_manager/other_projects.html
+++ b/task_manager/templates/task_manager/other_projects.html
@@ -1,6 +1,8 @@
 {% extends 'task_manager/base_generic.html' %}
 
 {% block content %}
+  <div class="jumbotron py-1 bg-scheduler-dark-2">
   <h1 class="h3 text-center">Other projects</h1>
   <p class="text-center">Other projects will be link here soon.</p>
+  </div>
 {% endblock %}
