--- a/task_manager/templates/task_manager/shoppinglist_form.html
+++ b/task_manager/templates/task_manager/shoppinglist_form.html
@@ -3,11 +3,13 @@
 {% block content %}
   <form method="post">
     {% csrf_token %}
+    <div class="jumbotron py-2 bg-scheduler-dark-2">
     <div class="form-group">
       {{ form }}
     </div>
     <div class="form-group">
-      <button type="submit" class="btn mb-3 bg-scheduler c-scheduler-dark">Save</button>
+      <button type="submit" class="btn bg-scheduler c-scheduler-dark">Save</button>
+    </div>
     </div>
   </form>
 {% endblock %}
