Improved UX form control theme

--- a/scheduler/templates/400.html
+++ b/scheduler/templates/400.html
@@ -1,5 +1,7 @@
 {% extends 'task_manager/base_generic.html' %}
 
 {% block content %}
-  <h1>400: Bad request</h1>
+  <div class="jumbotron py-3 bg-scheduler-dark-2">
+    <h1 class="text-center">400: Bad request</h1>
+  </div>
 {% endblock %}
