--- a/scheduler/templates/404.html
+++ b/scheduler/templates/404.html
@@ -1,5 +1,7 @@
 {% extends 'task_manager/base_generic.html' %}
 
 {% block content %}
-  <h1>404: Page not found</h1>
+  <div class="jumbotron py-3 bg-scheduler-dark-2">
+    <h1 class="text-center">404: Page not found</h1>
+  </div>
 {% endblock %}
