--- a/schedule_manager/templates/schedule_manager/scheduleweek.html
+++ b/schedule_manager/templates/schedule_manager/scheduleweek.html
@@ -4,26 +4,43 @@
   <form method="post">
     {% csrf_token %}
     <div class="jumbotron py-2 bg-scheduler-dark-2">
-    <div class="form-group">{#    TODO: change to data type input#}
-      {{ form }}
-    </div>
-    <div class="form-group">
-      <button type="submit" class="btn bg-scheduler c-scheduler-dark">Submit</button>
-    </div>
+      <div class="form-group">
+        {{ form.date.label_tag }}
+        <input type="date" name="date" value="{{ form.date.value }}" class="form-control bg-scheduler-dark-3" required id="id_date">
+        <small class="text-muted">{{ form.date.help_text }}</small>
+        {% for error in form.date.errors %}
+          <br><small class="text-danger">{{ error }}</small>
+        {% endfor %}
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn bg-scheduler c-scheduler-dark">Show</button>
+      </div>
     </div>
   </form>
-  <div class="jumbotron py-2 bg-scheduler-dark-2">
-    {% if week_days %}
-      <ul>
-        {% for day in week_days %}
-          <h1>{{ day.name }}</h1>
-          {% for act in day.activities %}
-            <li>{{ act }}</li>
-          {% endfor %}
-        {% endfor %}
-      </ul>
-    {% else %}
-      <h1>Select proper week to see your activities</h1>
-    {% endif %}
-  </div>
+  {% if week_days %}
+    {% for day in week_days %}
+      <div class="jumbotron mb-3 p-2 bg-scheduler-dark-2 c-scheduler-white">
+        <h1 class="display-4">{{ day.name }}</h1>
+        <div class="list-group">
+          {% if day.activities %}
+            {% for act in day.activities %}
+              <a class="list-group-item bg-scheduler-dark-3" href="#">
+                <h1 class="h5 c-scheduler-light">{{ act }}</h1>
+                <h1 class="h5 lead">{{ act.name }}</h1>
+                <small class="text-muted">{{ act.description }}</small>
+              </a>
+            {% endfor %}
+          {% else %}
+            <div class="list-group-item bg-scheduler-dark-2">
+              <h1 class="h4 lead text-muted">No activity</h1>
+            </div>
+          {% endif %}
+        </div>
+      </div>
+    {% endfor %}
+  {% elif not first_select %}
+    <div class="jumbotron py-2 bg-scheduler-dark-2">
+      <h1 class="text-center">There are no activities in this week</h1>
+    </div>
+  {% endif %}
 {% endblock %}
