--- a/scheduler/templates/index.html
+++ b/scheduler/templates/index.html
@@ -3,17 +3,22 @@
 {% block content %}
   {% if user.is_authenticated %}
     <div class="jumbotron mb-3 py-1 bg-scheduler-dark-2">
-    <h1 class="text-center">Welcome {{ request.user.username }}!</h1>
+      <h1 class="text-center">Welcome {{ request.user.username }}!</h1>
     </div>
     <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-list' %}" role="button">Your Tasks</a>
     <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'task_manager:task-create' %}" role="button">Create Task</a>
     <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'shoppinglist_manager:slist-list' %}" role="button">Your Shopping Lists</a>
     <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'shoppinglist_manager:slist-create' %}" role="button">Create Shopping List</a>
     <div class="jumbotron py-1 bg-scheduler-dark-2">
-    <h2 class="text-center mb-3">Summary</h2>
-    <p class="text-center">You have <strong>{{ num_tasks }}</strong> task{% if num_tasks != 1 %}s{% endif %} on-going</p>
-    <p class="text-center">You have <strong>{{ num_active_slist }}</strong> active shopping list{% if num_active_slist != 1 %}s{% endif %}</p>
+      <h2 class="text-center mb-3">Summary</h2>
+      <p class="text-center">You have <strong>{{ num_tasks }}</strong> task{% if num_tasks != 1 %}s{% endif %} on-going</p>
+      <p class="text-center">You have <strong>{{ num_active_slist }}</strong> active shopping list{% if num_active_slist != 1 %}s{% endif %}</p>
     </div>
+
+{#    Tests#}
+    <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'schedule_manager:activity-create' %}" role="button">Create Activity</a>
+    <a class="btn mb-3 bg-scheduler c-scheduler-dark btn-lg w-100" href="{% url 'schedule_manager:schedule-week' %}" role="button">Schedule Weeks</a>
+
   {% else %}
     <div class="jumbotron py-3 mb-3 bg-scheduler-dark-2">
     <h1 class="text-center mb-3">Welcome to Scheduler!</h1>
